--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies.serenity]
 default-features = false
-features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
+features = ["builder", "cache", "client", "gateway", "model", "native_tls_backend"]
 version = "0.12.5"
 
 [dependencies]
@@ -14,8 +14,8 @@ tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
 regex = "1.12.2"
 dotenvy = "0.15.7"
 serde = "1.0.228"
-reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
 similar = "2.7.0"
 redb = "3.1.0"
 bincode = "=1.3.3"
-rand = "0.9.2"
+rand = "0.8"
